src/driver/ajinextek/AXL(Library)/C, C++/AXDev.h


	//////////////////////////////////////////////////////////////////////////


	//////////////////////////////////////////////////////////////////////////
	// MonitorEx  
	// 데이터를 수집을 진행할 항목을 추가합니다.
	DWORD  __stdcall AxlMonitorExSetItem(long lItemIndex, DWORD dwSignalType, long lSignalNo, long lSubSignalNo);


	// 데이터 수집을 진행할 항목들에 관한 정보를 가져옵니다.
	DWORD  __stdcall AxlMonitorExGetIndexInfo(long* lpItemSize, long* lpItemIndex);


	// 데이터 수집을 진행할 각 항목의 세부 설정을 가져옵니다.
	DWORD  __stdcall AxlMonitorExGetItemInfo(long lItemIndex, DWORD* dwpSignalType, long* lpSignalNo, long* lpSubSignalNo);


	// 모든 데이터 수집 항목의 설정을 초기화합니다.
	DWORD  __stdcall AxlMonitorExResetAllItem();


	// 선택된 데이터 수집 항목의 설정을 초기화합니다.
	DWORD  __stdcall AxlMonitorExResetItem(long lItemIndex);


	// 데이터 수집의 트리거 조건을 설정합니다.
	DWORD  __stdcall AxlMonitorExSetTriggerOption(DWORD dwSignalType, long lSignalNo, long lSubSignalNo, DWORD dwOperatorType, double dValue1, double dValue2);


	// 데이터 수집의 트리거 조건을 가져옵니다.
	//DWORD  __stdcall AxlMonitorExGetTriggerOption(DWORD* dwpSignalType, long* lpSignalNo, long* lpSubSignalNo, DWORD* dwpOperatorType, double* dpValue1, double* dpValue2);

	// 데이터 수집의 트리거 조건을 초기화합니다.
	DWORD  __stdcall AxlMonitorExResetTriggerOption();


	// 데이터 수집을 시작합니다.
	DWORD  __stdcall AxlMonitorExStart(DWORD dwStartOption, DWORD dwOverflowOption);


	// 데이터 수집을 정지합니다.
	DWORD  __stdcall AxlMonitorExStop();


	// 수집된 데이터를 가져옵니다.
	DWORD  __stdcall AxlMonitorExReadData(long* lpItemSize, long* lpDataCount, double* dpReadData);


	// 데이터 수집의 주기를 가져옵니다.
	DWORD  __stdcall AxlMonitorExReadPeriod(DWORD* dwpPeriod);

	//////////////////////////////////////////////////////////////////////////

	// X2, Y2 축에 대한 Offset 위치 정보를 포함한 2축 직선 보간 #01.
	DWORD  __stdcall AxmLineMoveDual01(long lCoordNo, double* dpEndPosition, double dVelocity, double dAccel, double dDecel, double dOffsetLength, double dTotalLength, double* dpStartOffsetPosition, double* dpEndOffsetPosition);

	// X2, Y2 축에 대한 Offset 위치 정보를 포함한 2축 원호 보간 #01.
	DWORD  __stdcall AxmCircleCenterMoveDual01(long lCoordNo, long* lpAxes, double* dpCenterPosition, double* dpEndPosition, double dVelocity, double dAccel, double dDecel, DWORD dwCWDir, double dOffsetLength, double dTotalLength, double* dpStartOffsetPosition, double* dpEndOffsetPosition);


	// 해당보드의 connect mode 를 반환한다.
	// dpMode : 1 Auto Connect Mode
	// dpMode : 0 Manual Connect Mode
	DWORD	__stdcall AxlGetBoardConnectMode(long lBoardNo, DWORD *dwpMode);

	// 해당보드의 connect mode 를 설정한다.
	// dMode : 1 Auto Connect Mode
	// dMode : 0 Manual Connect Mode	
	DWORD	__stdcall AxlSetBoardConnectMode(long lBoardNo, DWORD dwMode);

	
	//지정된 축의 Command Queue 를 초기화 한다.
	DWORD	__stdcall AxmStatusSetCmdQueueClear(long lAxisNo);

	
	// 지정된 축의 통신 프로토콜관련 Data 를 확인한다.	
	DWORD	__stdcall AxmStatusGetControlBits(long lAxisNo, DWORD* dwpTxData, DWORD* dwpRxData);


	// 사용 중인 AXL이 있는지 확인(Shared Memory가 존재하는지 확인)
	BOOL	__stdcall AxlIsUsing();

	DWORD	__stdcall AxlRescanExternalDevice();

	DWORD	__stdcall AxlGetExternalDeviceInfo(long lBoardNo, void* devInfo);  //void* -> ExternalDeviceInfo*