src/driver/ajinextek/AXL(Library)/Visual Basic/AXDev.bas


    '
    ' MonitorEx
    ' 데이터를 수집을 진행할 항목을 추가합니다.
    Public Declare Function AxlMonitorExSetItem Lib "AXL.dll" (ByVal lItemIndex As Long, ByVal dwSignalType As Long, ByVal lSignalNo As Long, ByVal lSubSignalNo As Long) As Long

    ' 데이터 수집을 진행할 항목들에 관한 정보를 가져옵니다.
    Public Declare Function AxlMonitorExGetIndexInfo Lib "AXL.dll" (ByRef lpItemSize As Long, ByRef lpItemIndex As Long) As Long

    ' 데이터 수집을 진행할 각 항목의 세부 설정을 가져옵니다.
    Public Declare Function AxlMonitorExGetItemInfo Lib "AXL.dll" (ByVal lItemIndex As Long, ByRef dwpSignalType As Long, ByRef lpSignalNo As Long, ByRef lpSubSignalNo As Long) As Long

    ' 모든 데이터 수집 항목의 설정을 초기화합니다.
    Public Declare Function AxlMonitorExResetAllItem Lib "AXL.dll" () As Long

    ' 선택된 데이터 수집 항목의 설정을 초기화합니다.
    Public Declare Function AxlMonitorExResetItem Lib "AXL.dll" (ByVal lItemIndex As Long) As Long

    ' 데이터 수집의 트리거 조건을 설정합니다.
    Public Declare Function AxlMonitorExSetTriggerOption Lib "AXL.dll" (ByVal dwSignalType As Long, ByVal lSignalNo As Long, ByVal lSubSignalNo As Long, ByVal dwOperatorType As Long, ByVal dValue1 As Double, ByVal dValue2 As Double) As Long

    ' 데이터 수집의 트리거 조건을 가져옵니다.
    'DWORD  __stdcall AxlMonitorExGetTriggerOption(DWORD* dwpSignalType, long* lpSignalNo, long* lpSubSignalNo, DWORD* dwpOperatorType, double* dpValue1, double* dpValue2);

    ' 데이터 수집의 트리거 조건을 초기화합니다.
    Public Declare Function AxlMonitorExResetTriggerOption Lib "AXL.dll" () As Long

    ' 데이터 수집을 시작합니다.
    Public Declare Function AxlMonitorExStart Lib "AXL.dll" (ByVal dwStartOption As Long, ByVal dwOverflowOption As Long) As Long

    ' 데이터 수집을 정지합니다.
    Public Declare Function AxlMonitorExStop Lib "AXL.dll" () As Long

    ' 수집된 데이터를 가져옵니다.
    Public Declare Function AxlMonitorExReadData Lib "AXL.dll" (ByRef lpItemSize As Long, ByRef lpDataCount As Long, ByRef dpReadData As Double) As Long

    ' 데이터 수집의 주기를 가져옵니다.
    Public Declare Function AxlMonitorExReadPeriod Lib "AXL.dll" (ByRef dwpPeriod As Long) As Long
    '

    ' X2, Y2 축에 대한 Offset 위치 정보를 포함한 2축 직선 보간 #01.
    Public Declare Function AxmLineMoveDual01 Lib "AXL.dll" (ByVal lCoordNo As Long, ByRef dpEndPosition As Double, ByVal dVelocity As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal dOffsetLength As Double, ByVal dTotalLength As Double, ByRef dpStartOffsetPosition As Double, ByRef dpEndOffsetPosition As Double) As Long
    ' X2, Y2 축에 대한 Offset 위치 정보를 포함한 2축 원호 보간 #01.
    Public Declare Function AxmCircleCenterMoveDual01 Lib "AXL.dll" (ByVal lCoordNo As Long, ByRef lpAxes As Long, ByRef dpCenterPosition As Double, ByRef dpEndPosition As Double, ByVal dVelocity As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal dwCWDir As Long, ByVal dOffsetLength As Double, ByVal dTotalLength As Double, ByRef dpStartOffsetPosition As Double, ByRef dpEndOffsetPosition As Double) As Long

    ' 해당보드의 connect mode 를 반환한다.
    ' dpMode : 1 Auto Connect Mode
    ' dpMode : 0 Manual Connect Mode
    Public Declare Function AxlGetBoardConnectMode Lib "AXL.dll" (ByVal lBoardNo As Long, ByRef dwpMode As Long) As Long
    ' 해당보드의 connect mode 를 설정한다.
    ' dMode : 1 Auto Connect Mode
    ' dMode : 0 Manual Connect Mode
    Public Declare Function AxlSetBoardConnectMode Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal dwMode As Long) As Long

    '지정된 축의 Command Queue 를 초기화 한다.
    Public Declare Function AxmStatusSetCmdQueueClear Lib "AXL.dll" (ByVal lAxisNo As Long) As Long

    ' 지정된 축의 통신 프로토콜관련 Data 를 확인한다.
    Public Declare Function AxmStatusGetControlBits Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dwpTxData As Long, ByRef dwpRxData As Long) As Long

    ' 사용 중인 AXL이 있는지 확인(Shared Memory가 존재하는지 확인)
    Public Declare Function AxlIsUsing Lib "AXL.dll" () As Byte
    Public Declare Function AxlRescanExternalDevice Lib "AXL.dll" () As Long
    Public Declare Function AxlGetExternalDeviceInfo Lib "AXL.dll" (ByVal lBoardNo As Long, ByRef devInfo As void*) As Long


